--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "id": "ae878647",
    "metadata": {},
    "outputs": [],
@@ -6277,7 +6277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "id": "1dfd43e9",
    "metadata": {},
    "outputs": [
@@ -6291,7 +6291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6304,7 +6304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "id": "04eb87db",
    "metadata": {},
    "outputs": [],
@@ -6316,7 +6316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "id": "b2de442f",
    "metadata": {},
    "outputs": [
@@ -6640,7 +6640,7 @@
        "Wright High School                            <$586  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6654,7 +6654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "id": "dd28804a",
    "metadata": {},
    "outputs": [
@@ -6669,7 +6669,7 @@
        "Name: Average Math Score, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6682,7 +6682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "id": "aa4e6db5",
    "metadata": {},
    "outputs": [
@@ -6697,7 +6697,7 @@
        "Name: Average Reading Score, dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6710,7 +6710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "id": "c9679b27",
    "metadata": {},
    "outputs": [
@@ -6725,7 +6725,7 @@
        "Name: % Passing Math, dtype: float64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6738,7 +6738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "id": "bc6b4a21",
    "metadata": {},
    "outputs": [
@@ -6753,7 +6753,7 @@
        "Name: % Passing Reading, dtype: float64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6766,7 +6766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "id": "91537203",
    "metadata": {},
    "outputs": [
@@ -6781,7 +6781,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6794,7 +6794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 98,
    "id": "02b8769d",
    "metadata": {},
    "outputs": [
@@ -6894,7 +6894,7 @@
        "$646-675                               53.526855  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6913,7 +6913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "id": "1eabfa97",
    "metadata": {},
    "outputs": [
@@ -7013,7 +7013,7 @@
        "$646-675                                     54  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7035,7 +7035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 100,
    "id": "3a258618",
    "metadata": {},
    "outputs": [],
@@ -7047,7 +7047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 101,
    "id": "f1472e82",
    "metadata": {},
    "outputs": [
@@ -7197,7 +7197,7 @@
        "Griffin High School                       $586-630  Medium (1000-1999)  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7211,7 +7211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 103,
    "id": "c1d09c86",
    "metadata": {},
    "outputs": [
@@ -7225,7 +7225,7 @@
        "Name: Average Math Score, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7239,7 +7239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 104,
    "id": "c47e646f",
    "metadata": {},
    "outputs": [
@@ -7253,7 +7253,7 @@
        "Name: Average Reading Score, dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7267,7 +7267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "id": "ebf0edc6",
    "metadata": {},
    "outputs": [
@@ -7281,7 +7281,7 @@
        "Name: % Passing Math, dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7295,7 +7295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "id": "2b77e6bc",
    "metadata": {},
    "outputs": [
@@ -7309,7 +7309,7 @@
        "Name: % Passing Reading, dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7323,7 +7323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "id": "6a94b205",
    "metadata": {},
    "outputs": [
@@ -7337,7 +7337,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7351,7 +7351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "id": "866214b2",
    "metadata": {},
    "outputs": [
@@ -7434,7 +7434,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7453,7 +7453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "id": "cad7cd2a",
    "metadata": {},
    "outputs": [
@@ -7536,7 +7536,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7558,7 +7558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "id": "0811e7fd",
    "metadata": {},
    "outputs": [
@@ -7571,7 +7571,7 @@
        "Name: Average Math Score, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7585,7 +7585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "id": "0aae8114",
    "metadata": {},
    "outputs": [
@@ -7598,7 +7598,7 @@
        "Name: Average Reading Score, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7612,7 +7612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "id": "319784f1",
    "metadata": {},
    "outputs": [
@@ -7625,7 +7625,7 @@
        "Name: % Passing Math, dtype: float64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7639,7 +7639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "id": "1d533cb5",
    "metadata": {},
    "outputs": [
@@ -7652,7 +7652,7 @@
        "Name: % Passing Reading, dtype: float64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7666,7 +7666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "id": "cb0d2224",
    "metadata": {},
    "outputs": [
@@ -7679,7 +7679,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7693,9 +7693,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "id": "4973273d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -7766,7 +7768,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7785,7 +7787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "id": "22a56517",
    "metadata": {},
    "outputs": [
@@ -7858,7 +7860,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7881,7 +7883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9472ba17",
+   "id": "7b258399",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7889,23 +7891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d60b899",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df26af1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f8c397f",
+   "id": "ec3b4cbe",
    "metadata": {},
    "outputs": [],
    "source": []
